@@ -98,6 +98,7 @@ class NetworkRepositoryServer(xmlshims.NetworkConvertors):
                         'getTroveLeavesByBranch',
                         'getTroveLeavesByLabel',
                         'getTroveVersionsByLabel',
+                        'getTrovesByPaths',
                         'getFileContents',
                         'getTroveLatestVersion',
                         'getChangeSet',
@@ -1567,6 +1568,80 @@ class NetworkRepositoryServer(xmlshims.NetworkConvertors):
             results[row]= self.auth.checkTrove(pattern, name)
 
         return results
+
+    def getTrovesByPaths(self, authToken, clientVersion, pathList, label, 
+                         all=False):
+        self.log(2, pathList, label, all)
+        cu = self.db.cursor()
+        schema.resetTable(cu, 'trovesByPathTmp')
+
+        userGroupIds = self.auth.getAuthGroups(cu, authToken)
+        if not userGroupIds:
+            return {}
+
+        for row, path in enumerate(pathList):
+            cu.execute("INSERT INTO trovesByPathTmp (row, path) "
+                       "VALUES (?, ?)", row, path)
+
+
+        query = """SELECT row, item, version, flavor, timeStamps,
+                          UP.permittedTrove 
+                        FROM trovesByPathTmp 
+                        JOIN TroveFiles USING(path)
+                        JOIN Instances USING(instanceId)
+                        JOIN Nodes ON
+                            Nodes.itemId = Instances.itemId AND
+                            Nodes.versionId = Instances.versionId
+                        JOIN LabelMap ON
+                            Nodes.itemId = LabelMap.itemId AND
+                            Nodes.branchId = LabelMap.branchId
+                        JOIN Labels USING(labelId)
+                        JOIN (SELECT
+                               Permissions.labelId as labelId,
+                               PerItems.item as permittedTrove,
+                               Permissions.permissionId as aclId
+                           FROM
+                               Permissions
+                               join Items as PerItems using (itemId)
+                           WHERE
+                               Permissions.userGroupId in (%s)
+                           ) as UP ON
+                           ( UP.labelId = 0 or UP.labelId = LabelMap.labelId )
+                        JOIN Items ON 
+                            (Instances.itemId = Items.itemId)
+                        JOIN Versions ON 
+                            (Instances.versionId = Versions.versionId)
+                        JOIN Flavors ON
+                            (Instances.flavorId = Flavors.flavorId)
+                        WHERE
+                            Instances.isPresent = 1 
+                            AND Labels.label = ?
+                        ORDER BY
+                            Nodes.finalTimestamp DESC
+                    """ % ",".join("%d" % x for x in userGroupIds)
+        cu.execute(query, label)
+
+        if all:
+            results = [[] for x in pathList]
+            for idx, name, versionStr, flavor, timeStamps, pattern in cu:
+                version = versions.VersionFromString(versionStr, 
+                        timeStamps=[float(x) for x in timeStamps.split(':')])
+                branch = version.branch()
+                results[idx].append((name, self.freezeVersion(version), flavor))
+            return results
+
+        results = [ {} for x in pathList ]
+        for idx, name, versionStr, flavor, timeStamps, pattern in cu:
+            if not self.auth.checkTrove(pattern, name):
+                continue
+
+            version = versions.VersionFromString(versionStr, 
+                        timeStamps=[float(x) for x in timeStamps.split(':')])
+            branch = version.branch()
+            results[idx].setdefault((name, branch, flavor), 
+                                    self.freezeVersion(version))
+        return [ [ (y[0][0], y[1], y[0][2]) for y in x.iteritems()] 
+                                                            for x in results ]
 
     def getCollectionMembers(self, authToken, clientVersion, troveName,
                              branch):
